--- a/templates/status.html
+++ b/templates/status.html
@@ -46,7 +46,7 @@ Connected Peers
                   <th scope="col">Public Key</th>
                   <th scope="col">Received</th>
                   <th scope="col">Transmitted</th>
-                  <th scope="col">Connected (Approximation)</th>
+                  <th scope="col">Connected</th>
                   <th scope="col">Last Handshake</th>
                 </tr>
               </thead>
