--- a/templates/global_settings.html
+++ b/templates/global_settings.html
@@ -67,6 +67,12 @@ Global Settings
                                     name="config_file_path" placeholder="E.g. /etc/wireguard/wg0.conf"
                                     value="{{ .globalSettings.ConfigFilePath }}">
                             </div>
+                            <div class="form-group">
+                                <label for="interface_name">Wireguard Interface Name</label>
+                                <input type="text" class="form-control" id="interface_name"
+                                       name="interface_name" placeholder="E.g. wg0"
+                                       value="{{ .globalSettings.InterfaceName }}">
+                            </div>
                         </div>
                         <!-- /.card-body -->
 
@@ -105,6 +111,8 @@ Global Settings
                             <dt>6. Wireguard Config File Path</dt>
                             <dd>The path of your Wireguard server config file. Please make sure the parent directory
                                 exists and is writable.</dd>
+                            <dt>7. Wireguard Interface Name</dt>
+                            <dd>The name of your Wireguard Interface.</dd>
                         </dl>
                     </div>
                 </div>
@@ -151,7 +159,8 @@ Global Settings
             const persistent_keepalive = $("#persistent_keepalive").val();
             const firewall_mark = $("#firewall_mark").val();
             const config_file_path = $("#config_file_path").val();
-            const data = {"endpoint_address": endpoint_address, "dns_servers": dns_servers, "mtu": mtu, "persistent_keepalive": persistent_keepalive, "firewall_mark": firewall_mark, "config_file_path": config_file_path};
+            const interface_name = $("#interface_name").val();
+            const data = {"endpoint_address": endpoint_address, "dns_servers": dns_servers, "mtu": mtu, "persistent_keepalive": persistent_keepalive, "firewall_mark": firewall_mark, "config_file_path": config_file_path, "interface_name": interface_name};
 
             $.ajax({
                 cache: false,
@@ -224,6 +233,9 @@ Global Settings
                     },
                     firewall_mark: {
                         required: false
+                    },
+                    interface_name: {
+                        required: true
                     }
                 },
                 messages: {
@@ -236,6 +248,9 @@ Global Settings
                     },
                     config_file_path: {
                         required: "Please enter WireGuard config file path"
+                    },
+                    interface_name: {
+                        required: "Please enter WireGuard Interface Name"
                     }
                 },
                 errorElement: 'span',
